# xla

./: BUILD.bazel  README.md  WORKSPACE  gtune_lt_0103.diff  hipblaslt_getAlgoFromIdx_fordlsym.diff  run_tests.sh  select_and_scatter_16.ll  select_and_scatter_32.ll  select_and_scatter_bf16.ll  test-delete.txt  test_pre_push.txt  workspace0.bzl  xla_gtune_lt_0103.diff
build_tools/configure/: configure.py
build_tools/rocm/: run_xla.sh  run_xla_gemm_rewriter.sh  run_xla_gemm_rewriter_hsa_exception.sh  run_xla_gemm_rewriter_mismatch.sh  run_xla_multi_gpu.sh
profile/: results_1129383.csv  results_3120477.csv  results_3129784.csv  results_3134416.csv
xla/: autotuning.proto  debug_options_flags.cc  glob_lit_test.bzl  lit.cfg.py  runlit.cfg.py  shape_util.cc  xla.bzl  xla.proto
xla/client/: client.cc
xla/pjrt/: local_device_state.cc  pjrt_executable.h
xla/runtime/: executable.cc  executable.h  execution_engine.cc  jit_executable.cc
xla/service/: BUILD  buffer_assignment.cc  buffer_assignment.h  compiler.h  convert_async_collectives_to_sync.cc  elemental_ir_emitter.cc  elemental_ir_emitter.h  executable.cc  generic_transfer_manager.cc  hlo_runner.cc  hlo_runner_pjrt.cc  latency_hiding_scheduler.cc  latency_hiding_scheduler.h  llvm_compiler.cc  service.cc  shaped_buffer.cc  xla_compile_main.cc
xla/stream_executor/: BUILD  blas.h  command_buffer.h  device_description.h  dnn.cc  dnn.h  lazy_op_runner.h  multi_platform_manager.cc  stream.cc  stream.h  stream_executor_pimpl.cc  stream_executor_pimpl.h
xla/tests/: BUILD  cholesky_test.cc  client_library_test_base.cc  (+12 more)
(+314 files in other folders)
