load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("@rules_license//rules:license.bzl", "license")

package(
    default_applicable_licenses = [":license"],
    default_visibility = ["//visibility:public"],
)

licenses(["notice"])

license(
    name = "license",
    package_name = "xla",
    license_kinds = ["@rules_license//licenses/spdx:Apache-2.0"],
)

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
        "//xla/client:client_library": "--config=rocm",
    },
)
